2 JavaCC compilation errors to fix